<resources>
    <string name="app_name">LibraryApp</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_again">Confirm Password</string>
    <string name="prompt_msg">Type a message</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_verify">Verify email</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_send">Send</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">Password too short or does not match</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="sample_message">Hello!</string>
    <string name="landing_button1">LandingFirstButton</string>
    <string name="landing_button2">LandingSecondButton</string>
    <string name="book_title">Title</string>
    <string name="book_author">Author</string>
    <string name="book_callnum">Call Num</string>
    <string name="book_publisher">Publisher</string>
    <string name="book_year">Year</string>
    <string name="book_location">Location</string>
    <string name="book_status">Status</string>
    <string name="book_keywords">Keywords</string>
    <string name="form_button">Form Button</string>
    <string name="book_image">Book Image</string>
    <string name="detail_button_1">Detail Button 1</string>
    <string name="detail_button_2">Detail Button 2</string>
    <string name="landing_button3">Log Out</string>
    <string name="refresh">Refresh</string>
    <string name="row_author">Author</string>
    <string name="row_book_title">Book Title</string>
    <string name="form_button1">Form Button 1</string>
    <string name="form_button2">Form Button 2</string>
</resources>
