<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.cmpe277.libraryapp.LandingPageActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textAlignment="center"
        android:textSize="20sp"
        android:text=""/>

    <Button
        android:id="@+id/landing_button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/landing_button1"/>

    <Button
        android:id="@+id/landing_button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/landing_button2"/>

    <Button
        android:id="@+id/landing_button3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="logOut"
        android:text="@string/landing_button3"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text=""/>

</LinearLayout>
